try to fix img alignment

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ h1 {
 }
 
 .header img {
-    height: 50px;
+    height: 70px;
+    margin-bottom: 40px;
 }
 
 #p2 {
